🧠 Tensor: Optimize joins with broadcast in ML_Previsao_Inadimplencia_2025
Co-authored-by: RodrigoValecred <205034931+RodrigoValecred@users.noreply.github.com>